# fluentpython-example-code-2e

./: pyproject.toml
09-closure-deco/: registration_param_1.py  registration_param_2_main.py  registration_param_2_module_funcs.py  registration_param_2_module_registry.py  stacked_decorator_vs_decorator_param_run_import_time.py
17-it-generator/: ex17_37_coroaverage.py
20-executors/getflags/: flags2_common.py
exercise/01-data-model/: frenchdeck.md  frenchdeck.py
exercise/17-it-generator/: ex17_37_coroaverage.py  roll_dice.py  sentence.py
exercise/22-dyn-attr-prop/oscon/: explore0.py
